--- a/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
+++ b/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
@@ -1,9 +1,9 @@
 \section{Multiple Particle Systems}
-\subsection{Z-particle Systemss}
+\subsection{Z-particle Systems}
 \subsubsection{Hydrogenic States}
 In case of $Z$ protons but only $1$ electron one has
 \begin{equation*}
-    E_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{Z e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{E_1}{n^2}
+    E_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{Z e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{Z^2 E_1}{n^2}
 \end{equation*}
 \subsubsection{Multi-Electron Systems}
 In a general multi-particle system (e.g.\ atom with $Z$ protons) the Hamiltonian is given by
