--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -534,13 +534,36 @@ Where $V(r)$ is the potential energy function which depends on the system. A sol
     d^3\mathbf{r} & = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
 \end{align*}
 
-\textbf{Normalization}
+\newpar{}
+\ptitle{Probability Calculations}
 
+\noindent\begin{equation*}
+    \int_{r_0}^{r_1} \int_{\phi_1}^{\phi_2} \int_{\theta_1}^{\theta_2} r^2 {\left[R(r)\right]}^2 \cdot |Y_\ell^{m_\ell}|^2 \sin\theta\;d\theta d\phi dr
+\end{equation*}
+
+with the angular probability density
+\begin{equation*}
+    |Y_\ell^{m_\ell}|^2 \sin\theta\
+\end{equation*}
+and radial probability density
+\begin{equation*}
+    r^2 {\left[R(r)\right]}^2
+\end{equation*}
+
+\newpar{}
+\ptitle{Normalization}
+
+Normalization over the angular part is given by
 \noindent\begin{equation*}
     \int_0^{2\pi}\int_0^{\pi} |Y_\ell^{m_\ell}|^2 \sin\theta\;d\theta d\phi \overset{!}{=} 1
 \end{equation*}
+Similarly, for the radial part
+\begin{equation*}
+    \int_0^{\infty} r^2 {\left[R(r)\right]}^2 dr = 1 
+\end{equation*}
 
-\textbf{Orthogonality}
+\newpar{}
+\ptitle{Orthogonality}
 
 \noindent\begin{equation*}
     \int_0^{2\pi}\int_0^{\pi} {(Y_\ell^{m_\ell})}^{(a)}{(Y_\ell^{m_\ell})}^{(b)} \sin\theta\;d\theta d\phi \overset{!}{=} \begin{cases}
