wrong energy equation removed

--- a/src/sections/final_cheatsheet/fin_SE.tex
+++ b/src/sections/final_cheatsheet/fin_SE.tex
@@ -11,7 +11,7 @@
 
 \ptitle{Phase Factor}
 \noindent\begin{equation*}
-    \varphi_n(t) =\exp\left[\frac{-iE_n t}{\hbar}\right], \qquad E_n = \frac{\hbar^2 k_n^2}{2m}
+    \varphi_n(t) =\exp\left[\frac{-iE_n t}{\hbar}\right]
 \end{equation*}
 
 \ptitle{TISE}
