--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -12,7 +12,7 @@ The Schrödinger equation can be solved by separation of variables:
 The \textbf{time-dependent} part is a first order ODE that can be solved by:
 \noindent\begin{align*}
     \frac{d\varphi}{dt} & =-\frac{iE}{\hbar}\varphi \quad\Leftrightarrow                                 \\
-    \varphi_n(t)        & =\exp\left[\frac{-iE_n t}{\hbar}\right], \qquad E_n = \frac{\hbar^2 k_n^2}{2m}
+    \varphi_n(t)        & =\exp\left[\frac{-iE_n t}{\hbar}\right]
 \end{align*}
 
 Where the solution $\varphi_n(t)$ is called the \textbf{phase factor}.
