--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -68,10 +68,10 @@ Explicit solution depends of the potential $V$.
 % \end{align*}
 {\footnotesize
     \begin{align*}
-    % \mathbf{\nabla} & =\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}                                      \\
-    \nabla^2  =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right) 
-              + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
-\end{align*}}
+        % \mathbf{\nabla} & =\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}                                      \\
+        \nabla^2  =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right)
+        + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
+    \end{align*}}
 \begin{equation*}
     d^2\mathbf{r} = \sin(\theta)d\theta\:d\phi; \qquad
     d^3\mathbf{r} = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
@@ -84,9 +84,8 @@ Explicit solution depends of the potential $V$.
     \int_{r_0}^{r_1} \int_{\phi_1}^{\phi_2} \int_{\theta_1}^{\theta_2} r^2 {\left[R(r)\right]}^2 \cdot |Y_\ell^{m_\ell}|^2 \sin\theta\;d\theta d\phi dr
 \end{equation*}
 \begin{equation*}
-    \underbrace{r^2 {\left[R(r)\right]}^2}_{\text{radial prob.\ density}} \text{and} \underbrace{|Y_\ell^{m_\ell}|^2 \sin\theta}_{\text{angular prob.\ density}}
+    \underbrace{r^2 {\left[R(r)\right]}^2}_{\text{radial prob.\ density}} \text{and} \underbrace{|Y_\ell^{m_\ell}|^2 \sin\theta}_{\text{angular prob.\ density}} \quad \text{normalized}
 \end{equation*}
-for which both probability densities are normalized w.r.t.\ ingetration over their complete domains.
 
 \textbf{Orthogonality}
 
@@ -140,7 +139,7 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
     \item $n$ defines the energy level of an electron and thus the size of the electron cloud and the energy associated with the electrons orbit.
 \end{itemize}
 
-\newpar{}
+% \newpar{}
 \textbf{Azimuthal Quantum Number} $\ell$
 \noindent\begin{equation*}
     \ell = 0, 1, 2, \ldots , n-1
@@ -173,8 +172,8 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
 
 \section{Anglar Momentum and Spin}
 \subsection{Angular Momentum}
-\noindent\begin{equation*}
-    \widehat{\mathbf{L}}=
+\noindent\begin{align*}
+    \widehat{\mathbf{L}} & =
     \begin{pmatrix}
         \widehat{L}_x \\
         \widehat{L}_y \\
@@ -188,11 +187,8 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
         x\widehat{p}_y-y\widehat{p}_x
     \end{pmatrix}
     =\frac{\hbar}{i}(\mathbf{\widehat{r}}\times\widehat{\mathbf{\nabla}})
-\end{equation*}
-with
-\begin{equation*}
-    |\mathbf{L}|=\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}}
-\end{equation*}
+    |\mathbf{L}|         & =\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}}
+\end{align*}
 
 See Subsection~\ref{ang_mom_comm} for compatibility.
 
@@ -215,10 +211,10 @@ with quantum numbers
 \end{align*}
 
 \subsubsection{Physical Interpretation}
-\noindent\begin{align*}
-    |\mathbf{L}| & =\hbar\sqrt{\ell(\ell+1)} \\
-    L_{z}        & =m_{\ell}\hbar
-\end{align*}
+\noindent\begin{equation*}
+    |\mathbf{L}|  =\hbar\sqrt{\ell(\ell+1)} \qquad
+    L_{z}=m_{\ell}\hbar
+\end{equation*}
 as $m_{\ell}=-\ell,\dots,\ell$, and $L_x, L_y, L_z$ are incompatible
 \begin{itemize}
     \item $L_z < |\mathbf{L}|$: $\mathbf{L}$ can never point directly along the $z$ axis
