fixed some typos

--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -37,7 +37,7 @@ Again, we assume that $V$ is time-independent.
 \paragraph{Hydrogenic States}
 Hydrogenic states are a special case with only 1 elctron. One then has
 \begin{equation*}
-    E_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{Z e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{Z^2 E_1}{n^2}
+    \widetilde{E}_n = -\left[\frac{m}{2\hbar^2}{\left(\frac{Z e^2}{4\pi\epsilon_0}\right)}^2\right]\frac{1}{n^2} = \frac{Z^2 E_1}{n^2}, \quad n=1,2,\dots
 \end{equation*}
 
 \paragraph{Multi-Electron States}
