--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -2,7 +2,7 @@
 
 \subsection{Operators}
 \noindent\begin{align*}
-    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x} & =x & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x} \\
+    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x} & =x & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x}
 \end{align*}
 
 \subsection{Probabilities}
@@ -296,7 +296,7 @@ into the GUP yields, assuming $\hat{Q}$ is time-independent, the \textbf{time-en
 \begin{equation*}
     \Delta t\cdot\Delta E\geqslant\frac\hbar2 \qquad \left|\begin{matrix}
         \Delta t & \equiv \frac{\sigma_Q}{|d\langle Q\rangle/dt|} \\
-        \Delta E & \equiv \sigma H
+        \Delta E & \equiv \sigma_H
     \end{matrix}\right.
 \end{equation*}
 where
