--- a/src/sections/final_cheatsheet/fin_SE.tex
+++ b/src/sections/final_cheatsheet/fin_SE.tex
@@ -59,7 +59,7 @@ A particle/wave in a general state $\Psi$ is in a superposition of stationary st
 
 \ptitle{Remarks:}
 \begin{itemize}
-    \item A Measurement will \textbf{collapse} $\Psi$ into one of the $\Psi_n$'s.
+    \item A measurement will \textbf{collapse} $\Psi$ into one of the $\Psi_n$'s.
     \item The separation constant $E$ must be \textbf{real} for the wave function to stay normalized.
     \item Probabilities and expectations of the general solution are in general \textbf{not} time-independent.
     \item As $c_n$ are independent of time, the probability to get a certain energy and $\langle H\rangle$ are constant in time (energy conservation).
