--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -4,7 +4,7 @@
     i\hbar\frac{\partial\Psi}{\partial t} = \underbrace{\left(\frac{-\hbar^2}{2m}\nabla^2 + \widehat{V}(t)\right)}_{\widehat{H}}\Psi = \left(\frac{\left(\widehat{p}_x^2 + \widehat{p}_y^2 +\widehat{p}_z^2 \right)}{2m} + \widehat{V}(t)\right)\Psi
 \end{equation*}
 
-\ptitle{TISE ($V$ time-independent)}
+\ptitle{TISE }($V$ time-independent)
 \begin{align*}
     \Psi_n(\mathbf{r},t)                                                                    & =\psi_n(\mathbf{r})\:e^{-iE_n t/\hbar} \\
     \underbrace{\left(-\frac{\hbar^2}{2m}\nabla^2 + \widehat{V}\right)}_{\widehat{H}}\psi_n & = E_n \psi_n
@@ -166,8 +166,8 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
 \end{equation*}
 
 \noindent\begin{align*}
-    \Psi_n \left(x,y,z\right) & ={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right) \\
-    E_n                       & = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \underbrace{\left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)}_{n}
+    \Psi_{n_x,n_y,n_z} & ={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right) \\
+    E_{n_x,n_y,n_z}    & = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)
 \end{align*}
 
 \section{Anglar Momentum and Spin}
@@ -186,8 +186,8 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
         z\widehat{p}_x-x\widehat{p}_z \\
         x\widehat{p}_y-y\widehat{p}_x
     \end{pmatrix}
-    =\frac{\hbar}{i}(\mathbf{\widehat{r}}\times\widehat{\mathbf{\nabla}})
-    |\mathbf{L}|         & =\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}}
+    =\frac{\hbar}{i}(\mathbf{\widehat{r}}\times\widehat{\mathbf{\nabla}}) \\
+    |\mathbf{L}|         & =\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}},  \qquad \widehat{L}_z = \frac{\hbar}{i} \frac{\partial}{\partial \phi}
 \end{align*}
 
 See Subsection~\ref{ang_mom_comm} for compatibility.
@@ -207,7 +207,7 @@ $\widehat{L}^2$ and $\widehat{L}_z$ are compatible (share orthogonal eigenfuncti
 \end{align*}
 with quantum numbers
 \begin{align*}
-    \ell  =0, 1/2, 1, 3/2,\ldots\qquad  m_\ell = \underbrace{-\ell, -\ell+1, \ldots, \ell-1, \ell}_{2\ell+1}
+    \ell  =0, 1, 2,\ldots\qquad  m_\ell = \underbrace{-\ell, -\ell+1, \ldots, \ell-1, \ell}_{2\ell+1}
 \end{align*}
 
 \subsubsection{Physical Interpretation}
