--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -59,15 +59,11 @@ Pauli/spin: 2 electron s per orbital.
 \end{equation*}
 
 \ptitle{Noble Gas Notation}
-\begin{equation*}
+\noindent\begin{equation*}
     Fe(Z=26): 1s^2 2s^2 2p^6 3s^2 3p^6 4s^2 3d^6 = \left[Ar\right]4s^2 3d^6
 \end{equation*}
 
-\ptitle{Exceptions}
-\begin{equation*}
-    Cr: \left[Ar\right]4s^1 3d^5 \quad
-    Cu: \left[Ar\right]4s^1 3d^{10}
-\end{equation*}
+\ptitle{Exceptions}: $Cr: \left[Ar\right]4s^1 3d^5 \quad Cu: \left[Ar\right]4s^1 3d^{10}$
 
 \subsection{Full-State Description of Atoms}
 \ptitle{Angular Momentum (AM)}
@@ -150,10 +146,7 @@ with spacing ($\to$ bands)
         k_x = \frac{n_x\pi}{l_x}, k_y = \frac{n_y\pi}{l_y}, k_z = \frac{n_z\pi}{l_z}
     \end{cases}
 \end{equation*}
-and each solution occupies
-\noindent\begin{equation*}
-    \frac{\pi^3}{l_x l_y l_z}=\frac{\pi^3}{V}
-\end{equation*}
+and each solution occupies $\frac{\pi^3}{l_x l_y l_z}=\frac{\pi^3}{V}$
 
 \subsubsection{Fermi Energy}
 \newpar{}
