--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -53,17 +53,15 @@ Evaluate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{
 \ptitle{Canonical Commutation Relations}
 
 \noindent\begin{align*}
-    \left[\widehat{x},\widehat{p}_x\right]  & = i\hbar & \left[\widehat{x}, \widehat{y}\right]     & = 0 \\
+    \left[\widehat{x},\widehat{p}_x\right]  & = i\hbar & \left[\widehat{x}, \widehat{y}\right]     & = 0 &
     \left[\widehat{x}, \widehat{p}_y\right] & = 0      & \left[\widehat{p}_x, \widehat{p}_y\right] & = 0
 \end{align*}
 \ptitle{Useful Commutators}
 
 \noindent\begin{align*}
-    \left[c,\hat B\right]                        & =0                     & \left[\widehat{H},\widehat{x}\right]     & =-\frac{i\hbar}{m}\widehat{p} \\
-    \left[\widehat{a}_{-},\widehat{a}_{+}\right] & = 1                    & \left[\widehat{H}, \widehat{V}\right]    & \neq 0                        \\
-    \left[\widehat{x}^n,\widehat{p}\right]       & = i \hbar n x^{n-1}    & \left[\widehat{V},\widehat{x}\right]     & =0                            \\
-    \left[\widehat{x},\widehat{p}^2\right]       & = 2i\hbar\widehat{p}   & \left[\widehat{L}_x,\widehat{L}_y\right] & =i\hbar\widehat{L}_z          \\
-    \left[f(\widehat{x}),\widehat{p}\right]      & = i \hbar\frac{df}{dx} &                                          &
+    \left[c,\hat B\right]                  & =0                            & \left[\widehat{a}_{-},\widehat{a}_{+}\right] & = 1                  & \left[\widehat{L}_x,\widehat{L}_y\right] & =i\hbar\widehat{L}_z   \\
+    \left[\widehat{x}^n,\widehat{p}\right] & = i \hbar n x^{n-1}           & \left[\widehat{x},\widehat{p}^2\right]       & = 2i\hbar\widehat{p} & \left[f(\widehat{x}),\widehat{p}\right]  & = i \hbar\frac{df}{dx} \\
+    \left[\widehat{H},\widehat{x}\right]   & =-\frac{i\hbar}{m}\widehat{p} & \left[\widehat{H}, \widehat{V}\right]        & \neq 0               & \left[\widehat{V},\widehat{x}\right]     & =0
 \end{align*}
 
 
