--- a/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
+++ b/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
@@ -74,7 +74,7 @@ The overall solutions are linear combinations (sym.\ or asym.):
 \paragraph[Exchange Symmetry]{Exchange Symmetry of $\psi_\pm$}
 \ptitle{Exchange Operator $\widehat{P}$}
 
-\begin{equation*}
+\noindent\begin{equation*}
     \widehat{P}\psi(\mathbf{r_1},\mathbf{r_2})=\psi(\mathbf{r_2},\mathbf{r_1})
 \end{equation*}
 $\widehat{P}$, $\widehat{H}$ share the eigenfunctions $\psi_{\pm}$ (eigvals.\ = $\pm 1$):
