--- a/src/sections/final_cheatsheet/fin_Appendix.tex
+++ b/src/sections/final_cheatsheet/fin_Appendix.tex
@@ -32,21 +32,36 @@ more on \textit{Useful Info Sheet}
 
 
 \subsection{Legendre Polynomials}
+% \begin{footnotesize}
+%     \noindent\begin{align*}
+%         P_{0} & =1                     & P_{3} & =\frac{1}{2}(5x^{3}-3x)           \\
+%         P_{1} & =x                     & P_{4} & =\frac{1}{8}(35x^{4}-30x^{2}+3)   \\
+%         P_{2} & =\frac{1}{2}(3x^{2}-1) & P_{5} & =\frac{1}{8}(63x^{5}-70x^{3}+15x)
+%     \end{align*}
+% \end{footnotesize}
 \begin{footnotesize}
-    \noindent\begin{align*}
-        P_{0} & =1                     & P_{3} & =\frac{1}{2}(5x^{3}-3x)           \\
-        P_{1} & =x                     & P_{4} & =\frac{1}{8}(35x^{4}-30x^{2}+3)   \\
-        P_{2} & =\frac{1}{2}(3x^{2}-1) & P_{5} & =\frac{1}{8}(63x^{5}-70x^{3}+15x)
-    \end{align*}
+    \noindent\begin{gather*}
+        P_{0} =1, \quad P_{1}=x,\quad P_{2}=\frac{1}{2}(3x^{2}-1), \quad P_{3}  =\frac{1}{2}(5x^{3}-3x)\\
+        P_{4} =\frac{1}{8}(35x^{4}-30x^{2}+3), \quad P_{5} =\frac{1}{8}(63x^{5}-70x^{3}+15x)
+    \end{gather*}
 \end{footnotesize}
 
 \subsubsection[Associated Legendre Functions]{Associated Legendre Functions for $x=\cos(\theta)$}
+% \begin{footnotesize}
+%     \noindent\begin{align*}
+%         P_{0}^{0}     & =1                       & P_{2}^{0}     & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
+%         P_{1}^{\pm 1} & =-\sin\theta             & P_{3}^{\pm 3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
+%         P_{1}^{0}     & =\cos\theta              & P_{3}^{\pm 2} & =15 \sin^{2}\theta \cos\theta                \\
+%         P_{2}^{\pm 2} & =3 \sin^{2}\theta        & P_{3}^{\pm 1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
+%         P_{2}^{\pm 1} & =-3 \sin\theta\cos\theta & P_{3}^{0}     & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
+%     \end{align*}
+% \end{footnotesize}
+
 \begin{footnotesize}
-    \noindent\begin{align*}
-        P_{0}^{0}     & =1                       & P_{2}^{0}     & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
-        P_{1}^{\pm 1} & =-\sin\theta             & P_{3}^{\pm 3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
-        P_{1}^{0}     & =\cos\theta              & P_{3}^{\pm 2} & =15 \sin^{2}\theta \cos\theta                \\
-        P_{2}^{\pm 2} & =3 \sin^{2}\theta        & P_{3}^{\pm 1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
-        P_{2}^{\pm 1} & =-3 \sin\theta\cos\theta & P_{3}^{0}     & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
-    \end{align*}
+    \noindent\begin{gather*}
+        P_{0}^{0}=1, \quad P_{1}^{0}=\cos\theta, \quad P_{1}^{\pm 1} =-\sin\theta, \quad P_{2}^{0} =\frac{1}{2}(3 \cos^{2}\theta-1)\\
+        P_{2}^{\pm 1} =-3 \sin\theta\cos\theta, \quad P_{2}^{\pm 2} =3 \sin^{2}\theta, \quad P_{3}^{0} =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta) \\
+        P_{3}^{\pm 1}  =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1),\quad P_{3}^{\pm 2}  =15 \sin^{2}\theta \cos\theta,\\
+        P_{3}^{\pm 3}  =-15 \sin\theta(1-\cos^{2}\theta)
+    \end{gather*}
 \end{footnotesize}
