--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -2,15 +2,14 @@
 
 \subsection{Operators}
 \noindent\begin{align*}
-    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x} & =x & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x}
+    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x}              & =x             & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x}            \\
+                              &  & \widehat{T}_r \varphi(x) & = \varphi(x-a): & \widehat{T}_r & = \exp\left(-\frac{ia}{\hbar} \widehat{p}\right)
 \end{align*}
 
 \subsection{Probabilities}
 The probability of finding the particle between $a$ and $b$ at time $t$ is:
-\begin{equation*}
-    \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx
-\end{equation*}
 \begin{align*}
+    \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx                                                                                    \\
     \int_{-\infty}^{\infty} |C\cdot \Psi(x,t)|^2 dx                                 = \langle C\Psi|C\Psi\rangle & = 1,\;\Psi\in L_2, \; C\in\mathbb{C} \\
     \frac{d}{dt}\int_{-\infty}^{\infty} |\Psi(x,t)|^2 dx = \frac{d}{dt}\langle\Psi|\Psi\rangle                   & = 0
 \end{align*}
@@ -95,6 +94,7 @@ Assuming the functions $f,g$ are square integrable i.e.\ in $L_2$ (\textbf{Hilbe
     \sum_{j=1}^{n} \left|f_j\right\rangle \left\langle f_j\right| & = \mathbf{I}                         &  & \text{closure relation}
 \end{align*}
 
+\newcol{}
 \ptitle{Properties of Inner Product}
 \noindent\begin{align*}
     \langle \lambda f|g \rangle & =\lambda^* \langle f|g \rangle               & \langle f|\lambda g \rangle & =\lambda \langle f|g \rangle \\
@@ -220,18 +220,24 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
 
 \subsection{Fundamental QM Relations}
 
-\ptitle{Black Body Radiation}
+\noindent\begin{align*}
+    \mathsf{Black\ Body\ Radiation}: &  & k_B T_{low}         & \ll h\nu_{high}                         \\
+    \mathsf{Photon Energy}           &  & E_{\mathsf{ph}}     & = \frac{hc}{\lambda}                    \\
+    \mathsf{De\ Broglie}             &  & p=\frac{h}{\lambda} & =\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
+\end{align*}
 
-\begin{equation*}
-    k_B T_{low} \ll h\nu_{high}
-\end{equation*}
+% \ptitle{Black Body Radiation}
 
-\ptitle{De Broglie}
+% \begin{equation*}
+%     k_B T_{low} \ll h\nu_{high}
+% \end{equation*}
 
-\begin{equation*}
-    p=\frac{h}{\lambda}=\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
-\end{equation*}
-\textbf{Remarks:}
+% \ptitle{De Broglie}
+
+% \begin{equation*}
+%     p=\frac{h}{\lambda}=\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
+% \end{equation*}
+\textbf{Remarks on de Broglie:}
 \begin{enumerate}
     \item Connects the domains of waves ($\lambda$) and particles ($p$).
     \item QM becomes relevant if $\lambda>d$ (item's characteristic size).
