--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -6,8 +6,8 @@
 
 \ptitle{TISE }($V$ time-independent)
 \begin{align*}
-    \Psi_n(\mathbf{r},t)                                                                    & =\psi_n(\mathbf{r})\:e^{-iE_n t/\hbar} \\
-    \underbrace{\left(-\frac{\hbar^2}{2m}\nabla^2 + \widehat{V}\right)}_{\widehat{H}}\psi_n & = E_n \psi_n
+    \Psi_n(\mathbf{r},t)                                         & =\psi_n(\mathbf{r})\:e^{-iE_n t/\hbar} \\
+    \left(-\frac{\hbar^2}{2m}\nabla^2 + \widehat{V}\right)\psi_n & = E_n \psi_n
 \end{align*}
 
 \subsection{Spherical Symmetry}
@@ -161,16 +161,13 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
 \end{itemize}
 
 \subsection{Cubical ISW}
-\noindent\begin{equation*}
-    V(x,y,z)=\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}
-\end{equation*}
-
 \noindent\begin{align*}
+    V(x,y,z)           & =\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}                                            \\
     \Psi_{n_x,n_y,n_z} & ={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right) \\
     E_{n_x,n_y,n_z}    & = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)
 \end{align*}
 
-\section{Anglar Momentum and Spin}
+\section{Angular Momentum and Spin}
 \subsection{Angular Momentum}
 \noindent\begin{align*}
     \widehat{\mathbf{L}} & =
