--- a/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
+++ b/src/sections/final_cheatsheet/fin_Multiple_Particles.tex
@@ -8,8 +8,8 @@ A hydrogenic atom with $Z$ protons and one electron has
 \subsubsection{Multi-Electron Systems}
 In a general multi-particle system (e.g.\ atom with $Z$ protons) the Hamiltonian is given by
     {\small
-        \begin{equation*}
-            \widehat{H} = \sum_{j=1}^{Z} \left[ \underbrace{ \left\{-\frac{\hbar^{2}}{2m}\nabla_{j}^{2}-\left(\frac{1}{4\pi \epsilon_{0}}\right)\frac{Ze^{2}}{r_{j}}\right\}}_{T\text{ and interaction with nucleus}}  +              \underbrace{\frac{1}{2}\left(\frac{1}{4\pi \epsilon_{0}}\right)\sum_{j\neq k}^{Z}\frac{e^{2}}{\left|\mathbf{r}_{j}-\mathbf{r}_{k}\right|}}_{\text{repulsive int.\ of electrons}}\right]
+        \noindent\begin{equation*}
+            \widehat{H} = \sum_{j=1}^{Z} \Biggl[ \underbrace{ -\frac{\hbar^{2}}{2m}\nabla_{j}^{2}-\left(\frac{1}{4\pi \epsilon_{0}}\right)\frac{Ze^{2}}{r_{j}}}_{T\text{ and interaction with nucleus}}  +              \underbrace{\frac{1}{2}\left(\frac{1}{4\pi \epsilon_{0}}\right)\sum_{j\neq k}^{Z}\frac{e^{2}}{\left|\mathbf{r}_{j}-\mathbf{r}_{k}\right|}}_{\text{repulsive int.\ of electrons}}\Biggr]
         \end{equation*}
     }
 
@@ -105,7 +105,7 @@ meaning that particles in $\psi_{+}$ (symmetric w.r.t.\ exchange) tend to be clo
     \item \textbf{Fermions} are particles with \textbf{half-integer} spin (e.g.\ electrons, protons, neutrons (s=$\frac{1}{2}$))
 \end{itemize}
 
-\newpar{}
+% \newpar{}
 \ptitle{Exchange Symmetry Axiom}
 
 The exchange symmetry of the overall wave function of
