--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -221,9 +221,9 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
 \subsection{Fundamental QM Relations}
 
 \noindent\begin{align*}
-    \mathsf{Black\ Body\ Radiation}: &  & k_B T_{low}         & \ll h\nu_{high}                         \\
-    \mathsf{Photon Energy}           &  & E_{\mathsf{ph}}     & = \frac{hc}{\lambda}                    \\
-    \mathsf{De\ Broglie}             &  & p=\frac{h}{\lambda} & =\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
+    \mathrm{Black\ Body\ Radiation}: &  & k_B T_{low}         & \ll h\nu_{high}                         \\
+    \mathrm{Photon\ Energy}           &  & E_{\mathsf{ph}}     & = \frac{hc}{\lambda}                    \\
+    \mathrm{De\ Broglie}             &  & p=\frac{h}{\lambda} & =\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
 \end{align*}
 
 % \ptitle{Black Body Radiation}
