typo fixed and small addition to angular momentum

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -668,10 +668,10 @@ For the potential
 \noindent\begin{equation*}
     V(x,y,z)=\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}
 \end{equation*}
-the stationary states $\Psi_n$ are given by
+the stationary states $\psi_n$ are given by
 
 \noindent\begin{equation*}
-    \Psi \left(x,y,z\right)={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right)
+    \psi \left(x,y,z\right)={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right)
 \end{equation*}
 and the corresponding energies are
 \noindent\begin{equation*}
