--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -2,7 +2,7 @@
 
 \subsection{Operators}
 \noindent\begin{align*}
-    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x}              & =x             & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x}            \\
+    \hat{Q}(\hat{x},\hat{p}): &  & \widehat{x}              & =x              & \widehat{p}_x & = -i\hbar \frac{\partial}{\partial x}            \\
                               &  & \widehat{T}_r \varphi(x) & = \varphi(x-a): & \widehat{T}_r & = \exp\left(-\frac{ia}{\hbar} \widehat{p}\right)
 \end{align*}
 
@@ -221,8 +221,8 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
 \subsection{Fundamental QM Relations}
 
 \noindent\begin{align*}
-    \mathrm{Black\ Body\ Radiation}: &  & k_B T_{low}         & \ll h\nu_{high}                         \\
-    \mathrm{Photon\ Energy}           &  & E_{\mathsf{ph}}     & = \frac{hc}{\lambda}                    \\
+    \mathrm{Black\ Body\ Radiation}: &  & k_B T_{low}         & \ll h\nu_{high}                                    \\
+    \mathrm{Photon\ Energy}          &  & E_{\mathsf{ph}}     & = \frac{hc}{\lambda} = \frac{2\pi\hbar c}{\lambda} \\
     \mathrm{De\ Broglie}             &  & p=\frac{h}{\lambda} & =\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
 \end{align*}
 
