--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -22,16 +22,16 @@
 \setlength{\oldtabcolsep}{\tabcolsep}\setlength\tabcolsep{3pt}
 {\small     % Smaller font
     \begin{tabularx}{\linewidth}{@{}llllll@{}}
-            &                & \textbf{Subshell(s)} & \# \textbf{Orbitals}              & \multicolumn{2}{c}{\# \textbf{of electrons}\dots}                      \\
-        $n$ & \textbf{Shell} & $l=0\dots n-1$       & $m_{l}=-l,\dots l$                & \textbf{per Subshell}                             & \textbf{per Shell} \\
-        1   & K              & s                    & 1                                 & 2                                                 & 2                  \\
+            &                & \textbf{Subshell(s)}          & \# \textbf{Orbitals}              & \multicolumn{2}{c}{\# \textbf{of electrons}\dots}                      \\
+        $n$ & \textbf{Shell} & $\ell=0\dots n-1$             & $m_{\ell}=-\ell,\dots \ell$       & \textbf{per Subshell}                             & \textbf{per Shell} \\
+        1   & K              & s \quad{\color{teal}$\ell=0$} & 1                                 & 2                                                 & 2                  \\
         \cmidrule{1-6}
-        2   & L              & s                    & 1 \qquad{\color{teal} $\cdot 2=$} & 2  \qquad{\color{teal} $\sum=$}                   & 8                  \\
-            &                & p                    & 3 \qquad{\color{teal} $\cdot 2=$} & 6                                                 &                    \\
+        2   & L              & s \quad{\color{teal}$\ell=0$} & 1 \qquad{\color{teal} $\cdot 2=$} & 2  \qquad{\color{teal} $\sum=$}                   & 8                  \\
+            &                & p \quad{\color{teal}$\ell=1$} & 3 \qquad{\color{teal} $\cdot 2=$} & 6                                                 &                    \\
         \cmidrule{1-6}
-        3   & M              & s                    & 1                                 & 2                                                 & 18                 \\
-            &                & p                    & 3                                 & 6                                                 &                    \\
-            &                & d                    & 5                                 & 10                                                &                    \\
+        3   & M              & s \quad{\color{teal}$\ell=0$} & 1                                 & 2                                                 & 18                 \\
+            &                & p \quad{\color{teal}$\ell=1$} & 3                                 & 6                                                 &                    \\
+            &                & d \quad{\color{teal}$\ell=2$} & 5                                 & 10                                                &                    \\
         % \cmidrule{1-6}
         % 4   & N              & s                    & 1                                  & 2                                                 & 32                 \\
         %     &                & p                    & 3                                  & 6                                                 &                    \\
