--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -134,7 +134,7 @@ Neglecting spin and electron-electron interactions, an electrons wavefunction in
     E_{n_x,n_y,n_z}    & = \frac{\hbar^2\pi^2}{2m}\left(\frac{n_x^2}{l_x^2}+\frac{n_y^2}{l_y^2}+\frac{n_z^2}{l_z^2}\right),\quad n_x,n_y,n_z \in \mathbb{N}\backslash 0 \\
     \psi_{n_x,n_y,n_z} & = \sqrt{\frac{8}{l_x l_y l_z}} \sin\left(\frac{n_x\pi}{l_x}x\right) \sin\left(\frac{n_y\pi}{l_y}y\right) \sin\left(\frac{n_z\pi}{l_z}z\right)
 \end{align*}
-with spacing ($\to$ bands)
+with spacing ($\to$ bands). For $l_x=l_y=l_z=$ 1 cm one has:
 \noindent\begin{equation*}
     \Delta E \leq 10^{-6} ~\mathrm{eV}
 \end{equation*}
@@ -168,6 +168,7 @@ The \textit{density of states} - the number of one-electron levels per unit ener
 \noindent\begin{equation*}
     D(E)=\frac{\partial N(E)}{\partial E} = \frac{V}{2\pi^2}{\left(\frac{2m}{\hbar^2}\right)}^{\frac{3}{2}} E^{\frac{1}{2}} \quad \Rightarrow \Delta E = \frac{1}{D(E)}
 \end{equation*}
+and changes with the energy. It is denser for bottom states.
 
 \subsection{Potential Models}
 \subsubsection{Bloch's Theorem}
