--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -128,7 +128,7 @@ Pauli/spin: 2 electron s per orbital.
 
 
 \section{Solids}
-\subsection{Free-Electron Model}
+\subsection{Free-Electron Model}\label{ssec:FEM}
 Neglecting spin and electron-electron interactions, an electrons wavefunction in a box with length $l_x,l_y,l_z$ is given by
 \noindent\begin{align*}
     E_{n_x,n_y,n_z}    & = \frac{\hbar^2\pi^2}{2m}\left(\frac{n_x^2}{l_x^2}+\frac{n_y^2}{l_y^2}+\frac{n_z^2}{l_z^2}\right),\quad n_x,n_y,n_z \in \mathbb{N}\backslash 0 \\
