--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -160,12 +160,19 @@ Considering the hydrogen atom with a given $n$ (except the ground state $n=1$), 
     \item $m_l$ is responsible for the magnetic splitting of spectral lines i.e.\ the \textit{Zeeman effect}
 \end{itemize}
 
-\subsection{Cubical ISW}
+\subsection{Other 3D examples}
+\ptitle{Cubical ISW}: see~\ref{ssec:FEM} with $l_x,l_y,l_z = a$
+
+\ptitle{3D Harmonic Oscillator}
 \noindent\begin{align*}
-    V(x,y,z)           & =\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}                                            \\
-    \psi_{n_x,n_y,n_z} & ={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right) \\
-    E_{n_x,n_y,n_z}    & = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)
+    V(r) & = \frac{1}{2}m\omega^2r^2,\quad \omega^2r^2 = \omega_x^2x^2 + \omega_y^2y^2 + \omega_z^2z^2 \\
+    E_n  & = \hbar \omega(n_x+n_y+n_z + \frac{3}{2})
 \end{align*}
+% \noindent\begin{align*}
+%     V(x,y,z)           & =\begin{cases}0,&\text{if }x,y,z\text{ are all between }0\text{ and }a\\\infty,&\text{otherwise}\end{cases}                                            \\
+%     \psi_{n_x,n_y,n_z} & ={\left(\frac{2}{a}\right)}^{\frac{3}{2}} \sin\left(\frac{n_{x}\pi}{a}x\right)\sin\left(\frac{n_{y}\pi}{a}y\right)\sin\left(\frac{n_{z}\pi}{a}z\right) \\
+%     E_{n_x,n_y,n_z}    & = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)
+% \end{align*}
 
 \section{Angular Momentum and Spin}
 \subsection{Angular Momentum}
@@ -195,7 +202,7 @@ See Subsection~\ref{ang_mom_comm} for compatibility.
 
 \begin{tabularx}{\linewidth}{@{}>{\centering\arraybackslash}p{0.4\linewidth}X@{}}
     $\widehat{L}_{\pm}=\widehat{L}_x\pm i \widehat{L}_y$
-    & 
+     &
     change eigenvalue of $\widehat{L}_z$ by $\hbar$ \newline raises or lowers $m_\ell$ by 1.
 \end{tabularx}
 
